--- a/public/demo.html
+++ b/public/demo.html
@@ -45,9 +45,10 @@ function generatePointCloud() {
 		positions = new Float32Array(3*data.length);
 		colors = new Float32Array(3*data.length);
 		for (var i = 0; i < data.length; i++) {
-			positions[3*i] = data[i][0];
-			positions[3*i+1] = data[i][1];
-			positions[3*i+2] = data[i][2];
+			//Note: order is changed
+			positions[3*i] = data[i][2];
+			positions[3*i+1] = data[i][0];
+			positions[3*i+2] = data[i][1];
 			var intensity = data[i][3]/120;
 			colors[3*i] =   HUEtoRGB(intensity+1/3);
 			colors[3*i+1] = HUEtoRGB(intensity);
@@ -84,10 +85,10 @@ function init() {
 	scene.add(pickLocation);
 	
 	// controls
-	camera.position.set(5,5,2);
+	camera.position.set(0,10,0);
 	controls = new THREE.OrbitControls(camera);
-	controls.target.set( 0, 0, 0 );
-	camera.lookAt(new THREE.Vector3(0,0,0));
+	controls.target.set( 0, 100, 0 );
+	camera.lookAt(new THREE.Vector3(0,100,0));
 	
 	document.addEventListener( 'mousemove', onDocumentMouseMove, false );
 }
