adds jquery and plyloader

--- a/public/demo.html
+++ b/public/demo.html
@@ -1,7 +1,9 @@
 <html>
 <head>
 	<script src="javascripts/three.min.js"></script>
+	<script src="javascripts/PLYLoader.js"></script>
 	<script src="javascripts/OrbitControls.js"></script>
+	<script src="javascripts/jquery-2.1.1.min.js"></script>
 </head>
 <body style="margin: 0px; padding: 0px;">
 	<script src="demo.js"></script>
