recommit demo.js

--- a/public/demo.html
+++ b/public/demo.html
@@ -6,6 +6,7 @@
 	<script src="javascripts/DDSLoader.js"></script>
 	<script src="javascripts/MTLLoader.js"></script>
 	<script src="javascripts/OBJMTLLoader.js"></script>
+	<script src="javascripts/TypedArrayUtils.js"></script>
 	<script src="javascripts/jquery-2.1.1.min.js"></script>
 </head>
 <body style="margin: 0px; padding: 0px;">
