--- a/public/demo.html
+++ b/public/demo.html
@@ -8,6 +8,8 @@
 	<script src="javascripts/OBJMTLLoader.js"></script>
 	<script src="javascripts/TypedArrayUtils.js"></script>
 	<script src="javascripts/jquery-2.1.1.min.js"></script>
+	<script src="/javascripts/BinaryLoader.js"></script>
+
 </head>
 <body style="margin: 0px; padding: 0px;">
 	<script src="demo.js"></script>
