--- a/public/demo.html
+++ b/public/demo.html
@@ -12,6 +12,6 @@
 
 </head>
 <body style="margin: 0px; padding: 0px;">
-	<script src="demo.js"></script>
+	<script src="demo2.js"></script>
 </body>
 </html>
