--- a/public/demo.html
+++ b/public/demo.html
@@ -13,6 +13,7 @@
 	<!-- <script src="javascripts/history.js"></script> -->
 	<!-- <script src="javascripts/LazyJsonUndoRedo.min.js"></script> -->
 	<script src="/javascripts/BinaryLoader.js"></script>
+	<script src="/javascripts/async.js"></script>
 
 </head>
 <body style="margin: 0px; padding: 0px;" ng-app="roadglApp">
