--- a/public/demo.html
+++ b/public/demo.html
@@ -14,11 +14,24 @@
 	<!-- <script src="javascripts/LazyJsonUndoRedo.min.js"></script> -->
 	<script src="/javascripts/BinaryLoader.js"></script>
 	<script src="/javascripts/async.js"></script>
-
+	<style>
+	#overlay {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+}
+	</style>
 </head>
 <body style="margin: 0px; padding: 0px;" ng-app="roadglApp">
 	<div ng-controller="AppCtrl">
-		<div ng-roadgl></div>
+		<div ng-roadgl>
+		<canvas id="road">
+		</div>
+		<div id="overlay">
+		<h1 style="font-size: 50px; color: #fff">Welcome to RoadGL</h1>
+		</div>
 	</div>
 	<script src="controllers.js"></script>
 	<script src="app.js"></script>
